[package]
name = "drgreencrond"
version = "0.1.0"
edition = "2024"

[dependencies]
mio = { version = "1.2", features = ["os-ext"] }
nix = { version = "0.31", features = ["signal", "time"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
ureq = { version = "3.3", features = ["json"] }